<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/indent_16dp">

    <LinearLayout
        android:id="@+id/frameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/search">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/gray"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameSearch">

        <ProgressBar
            android:id="@+id/bottom_progress_bar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminateTint="@color/purple_700"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_8dp"
        android:gravity="center"
        android:text="@string/first_6_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameSearch"
        app:layout_constraintBottom_toTopOf="@+id/bank"/>

    <TextView
        android:id="@+id/bank"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8dp"
        android:layout_marginEnd="@dimen/indent_10dp"
        android:text="@string/bank_nwebsite_ncity_ntelephon"
        app:layout_constraintEnd_toStartOf="@+id/barrier3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/bank_Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_n_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/bank" />


    <TextView
        android:id="@+id/country"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank" />

    <TextView
        android:id="@+id/country_Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/country" />

    <TextView
        android:id="@+id/typeCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/typeCard_Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/typeCard" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_marginStart="@dimen/indent_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="bank" />

</androidx.constraintlayout.widget.ConstraintLayout>
